[package]
name = "fbtest"
version = "0.1.0"
authors = ["maico-smaniotto <maicosmaniotto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsfbclient = "0.23.0"
rsfbclient-native = "0.23.0"
datetime = "0.5.2"
chrono = "0.4.31"

